--- a/src/components/styles/Home.css
+++ b/src/components/styles/Home.css
@@ -33,7 +33,7 @@ body {
 }
 
 .home-hero {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('http://localhost:3001/images/banner.jpg'), url("image-not-found.jpg");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('https://backend-1-cek6.onrender.com/images/banner.jpg'), url("image-not-found.jpg");
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
@@ -341,6 +341,6 @@ body {
 }
 
 #product-header{
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('http://localhost:3001/images/Product.jpg'), url("image-not-found.jpg");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('https://backend-1-cek6.onrender.com/images/Product.jpg'), url("image-not-found.jpg");
   background-position: center;
 }
