--- a/src/components/styles/About.css
+++ b/src/components/styles/About.css
@@ -251,7 +251,6 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background: linear-gradient(45deg, var(--primary-color), var(--secondary-color));
   opacity: 0;
   transition: opacity 0.3s ease;
 }
@@ -285,12 +284,11 @@
 }
 
 .about-cta-block {
-  background-color: var(--primary-color);
   color: white;
   text-align: center;
   padding: 6rem 2rem;
   border-radius: 15px;
-  background-image: linear-gradient(45deg, var(--primary-color), var(--secondary-color));
+  background-image: linear-gradient(45deg, rgb(250, 32, 32), rgb(71, 71, 244));
   position: relative;
   overflow: hidden;
 }
