--- a/src/components/styles/About.css
+++ b/src/components/styles/About.css
@@ -16,7 +16,7 @@
 }
 
 .about-hero {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('https://backend-1-cek6.onrender.com/images/About.jpg');
+  background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('https://backend-1-cek6.onrender.com/images/image-1741203113363.jpg');
   object-fit: cover;
   background-size: cover; 
   background-position: center;
