--- a/src/components/styles/Header.css
+++ b/src/components/styles/Header.css
@@ -156,3 +156,9 @@
   }
 }
 
+.profile-tab[aria-selected="true"]{
+  background-color: white;
+  transition: 0.5s ease-in;
+  color: black;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+}
